--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,7 @@ devtools::install_github("edoffagne/idx2r")
 The package can also be installed from a CRAN repository:
 
 ```{r, eval = FALSE}
-> install.packages("idx2r")
+install.packages("idx2r")
 ```
 
 
